--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eslint-config-mourner": "3.0.0",
     "eslint-plugin-flowtype": "3.2.1",
     "live-server": "1.2.1",
-    "mapbox-gl": "JpmGuides/mapbox-gl-js#webgl-layer-localfiles",
+    "mapbox-gl": "JpmGuides/mapbox-gl-js#jpm-v0.53.1",
     "npm-run-all": "4.1.2",
     "pako": "1.0.6",
     "rollup": "^0.66.2",
