--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start-server": "live-server --watch=www --no-browser",
     "build-dev": "rollup -c --environment BUILD:dev --watch",
     "build": "rollup -c --environment BUILD:production",
-    "build-prod-min": "rollup -c --environment BUILD:production,MINIFY:true"
+    "build-prod-min": "rollup -c --environment BUILD:production,MINIFY:true",
+    "build-all":"rollup -c --environment BUILD:dev && rollup -c --environment BUILD:production,MINIFY:true && rollup -c --environment BUILD:dev"
   },
   "keywords": [],
   "author": "Oscar Fonts <oscar.fonts@geomati.co>",
