--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mapbox-gl-cordova-offline",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "Offline vector maps in Cordova using Mapbox GL JS",
   "main": "www/mapbox-gl-cordova-offline.js",
   "scripts": {
@@ -10,7 +10,7 @@
     "build-dev": "rollup -c --environment BUILD:dev --watch",
     "build": "rollup -c --environment BUILD:production",
     "build-prod-min": "rollup -c --environment BUILD:production,MINIFY:true",
-    "build-all":"rollup -c --environment BUILD:production && rollup -c --environment BUILD:production,MINIFY:true && rollup -c --environment BUILD:dev"
+    "build-all": "rollup -c --environment BUILD:production && rollup -c --environment BUILD:production,MINIFY:true && rollup -c --environment BUILD:dev"
   },
   "keywords": [],
   "author": "Oscar Fonts <oscar.fonts@geomati.co>",
@@ -51,7 +51,8 @@
     "cordova-plugin-device": "1.1.6",
     "cordova-plugin-file": "6.0.1",
     "cordova-plugin-whitelist": "1.3.2",
-    "cordova-sqlite-ext": "0.10.5"
+    "cordova-sqlite-ext": "0.10.5",
+    "request": "2.88.0"
   },
   "cordova": {
     "plugins": {
