--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "eslint-config-mourner": "3.0.0",
     "eslint-plugin-flowtype": "3.2.1",
     "live-server": "1.2.1",
-    "mapbox-gl": "JpmGuides/mapbox-gl-js#jpm-v0.53.1",
+    "mapbox-gl": "0.53.1",
     "npm-run-all": "4.1.2",
     "pako": "1.0.6",
     "rollup": "^0.66.2",
@@ -36,7 +36,7 @@
     "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-resolve": "3.4.0",
     "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-sourcemaps": "0.4.2",
     "rollup-plugin-terser": "4.0.4",
     "rollup-plugin-uglify": "^3.0.0",
     "rollup-plugin-unassert": "^0.2.0",
