--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mapbox-gl-cordova-offline",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "Offline vector maps in Cordova using Mapbox GL JS",
   "main": "www/mapbox-gl-cordova-offline.js",
   "scripts": {
@@ -27,7 +27,7 @@
     "eslint-config-mourner": "3.0.0",
     "eslint-plugin-flowtype": "3.2.1",
     "live-server": "1.2.1",
-    "mapbox-gl": "JpmGuides/mapbox-gl-js#jpm-v0.53.1",
+    "mapbox-gl": "github:JpmGuides/mapbox-gl-js#jpm-v1.5.0",
     "npm-run-all": "4.1.2",
     "pako": "1.0.6",
     "rollup": "^0.66.2",
